--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "eosjs-ecc": "^4.0.4",
     "express": "^4.16.3",
     "express-ipfilter": "^0.3.1",
-    "ipfs": "^0.33.1",
     "googleapis": "^36.0.0",
+    "ipfs": "^0.33.1",
     "nuxt": "^2.0.0",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.2.4"
   },
   "devDependencies": {
