--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-analytics": "^2.0.2",
+    "bignumber.js": "^8.0.1",
     "cross-env": "^5.2.0",
     "eosjs": "^16.0.9",
     "eosjs-api": "^7.0.4",
